--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ input {
 .container {
   max-width: 1220px;
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 0 25px;
 }
 
 .title {
@@ -471,7 +471,7 @@ input {
 }
 
 .product .nav-pills .nav-item .nav-link {
-  padding: 15px 30px;
+  padding: 10px 30px;
   font-weight: bold;
   color: #974c06;
   border-radius: 50px;
@@ -526,6 +526,11 @@ input {
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
+  padding-right: 10px;
+}
+
+.product__content-mobile {
+  display: none;
 }
 
 .product__content-heading {
@@ -612,7 +617,6 @@ input {
 
 .services {
   color: #974c06;
-  margin-bottom: 50px;
 }
 
 .services a {
@@ -662,7 +666,7 @@ input {
 
 .services__item-heading {
   font-weight: 700;
-  font-size: 25px;
+  font-size: 20px;
   margin: 35px 0 15px 0;
 }
 
@@ -692,8 +696,9 @@ input {
 }
 
 .banner {
-  padding-top: 50px;
+  padding: 50px 0;
   color: #fff;
+  background: rgba(231, 115, 6, 0.5);
 }
 
 .banner a {
@@ -738,6 +743,7 @@ input {
 
 .banner__content-heading {
   margin: 0px;
+  text-align: center;
 }
 
 .banner__content-desc {
@@ -864,6 +870,7 @@ input {
   transition: all 0.2s linear;
   cursor: pointer;
   position: relative;
+  color: #e77306;
 }
 
 .blog__button:hover {
@@ -872,7 +879,7 @@ input {
 }
 
 .blog__detail {
-  padding: 20px 30px 0 30px;
+  padding: 20px 20px 0 20px;
   text-align: left;
 }
 
@@ -925,7 +932,6 @@ input {
 
 .blog__detail-desc {
   margin-bottom: 15px;
-  display: inline-block;
   line-height: 1.3;
   color: #8b5d33;
 }
@@ -1069,7 +1075,7 @@ input {
   color: #2198dc;
 }
 
-.blog__search-group a {
+.blog__search-btn {
   margin-left: 15px;
   background: transparent;
   font-weight: 700;
@@ -1079,10 +1085,16 @@ input {
   padding: 5px 15px;
 }
 
-.blog__search-group a:hover {
+.blog__search-btn:hover {
   background: #e77306;
   color: #fff;
   border: 3px solid #e77306;
+}
+
+.blog__search-mobile {
+  display: none;
+  width: 35%;
+  margin: 10px auto;
 }
 
 .footer {
@@ -1258,6 +1270,81 @@ input {
   .header__bars {
     display: block;
   }
+  .product {
+    padding: 50px 0;
+  }
+  .product .nav-pills {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .product .nav-pills .nav-item .nav-link {
+    padding: 10px;
+  }
+  .product strong {
+    font-size: 13px;
+  }
+  .product__content-heading {
+    font-size: 13px;
+    margin-bottom: 0;
+  }
+  .product__content-logo {
+    margin: 10px 0;
+  }
+  .product__content-detail {
+    margin-bottom: 10px;
+  }
+  .product__content-detail p {
+    margin-bottom: 5px;
+    font-size: 20px;
+  }
+  .product__content-button a {
+    padding: 10px 30px;
+    font-size: 13px;
+  }
+  .product__content-bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .product__content-bottom img {
+    width: 50%;
+  }
+  .product__content-link {
+    font-size: 10px;
+  }
+  .services {
+    padding: 50px 0;
+  }
+  .services__list {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+  .blog {
+    margin: 50px 0;
+  }
+  .blog__heading {
+    font-size: 40px;
+  }
+  .blog__list {
+    gap: 30px;
+  }
+  .blog__detail-desc-text, .blog__detail-desc-link {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+  }
+  .blog__detail-desc-link {
+    -webkit-line-clamp: 1;
+  }
+  .blog__button {
+    padding: 15px 0;
+    margin-top: 30px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1291,6 +1378,56 @@ input {
     width: 100%;
     margin: 0;
   }
+  .product {
+    margin-top: -200px;
+  }
+  .product__heading {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+  .product .nav-pills {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    overflow: scroll;
+  }
+  .product .nav-pills .nav-item {
+    margin: 0 15px;
+  }
+  .product .nav-pills .nav-item .nav-link {
+    padding: 10px 20px;
+  }
+  .product__content-detail strong {
+    font-size: 10px;
+  }
+  .product__content-button a {
+    padding: 10px 20px;
+  }
+  .product__content-price {
+    margin-right: 15px;
+  }
+  .product__content-explore {
+    margin-right: 10px;
+  }
+  .product__content-bottom {
+    display: none;
+  }
+  .banner__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px 0;
+  }
+  .banner__item {
+    margin: 0;
+  }
+  .blog__list {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 50px;
+  }
+  .blog__search-group {
+    padding: 10px 20px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1312,5 +1449,87 @@ input {
   .hero .carousel-indicators li {
     width: 10px;
     height: 10px;
+  }
+  .product__heading {
+    font-size: 30px;
+  }
+  .product__content {
+    width: 100%;
+    top: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: none;
+        flex-wrap: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 10px 25px;
+  }
+  .product__content-slider {
+    display: none;
+  }
+  .product__content-mobile {
+    display: block;
+  }
+  .product__content-price {
+    margin-right: 30px;
+  }
+  .product__content-parameter {
+    margin-left: 30px;
+  }
+  .product__content-button {
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+  .product__content-button a {
+    padding: 10px 40px;
+    margin: 0 20px;
+  }
+  .services__list {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .services__item {
+    padding: 20px;
+  }
+  .services__item-content i {
+    font-size: 50px;
+  }
+  .services__item-heading {
+    margin: 15px;
+  }
+  .services__item-desc {
+    margin-bottom: 15px;
+  }
+  .banner__item {
+    padding: 80px 10px 30px 10px;
+    text-align: center;
+  }
+  .blog__heading {
+    font-size: 30px;
+  }
+  .blog__list {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .blog__search-group input::-webkit-input-placeholder {
+    font-size: 15px;
+  }
+  .blog__search-group input::-moz-input-placeholder {
+    font-size: 15px;
+  }
+  .blog__search-desktop {
+    display: none;
+  }
+  .blog__search-mobile {
+    display: block;
   }
 }
