--- a/sass/layout/_product.scss
+++ b/sass/layout/_product.scss
@@ -43,7 +43,7 @@
         }
       }
       .nav-link {
-        padding: 15px 30px;
+        padding: 10px 30px;
         font-weight: bold;
         color: $color-primary;
         border-radius: 50px;
@@ -89,6 +89,12 @@
     left: 0%;
     padding-top: 20px;
     transform: translateY(-50%);
+    padding-right: 10px;
+
+    &-mobile {
+      display: none;
+    }
+
     &-heading {
       font-size: 20px;
     }
