--- a/sass/layout/_blog.scss
+++ b/sass/layout/_blog.scss
@@ -52,6 +52,7 @@
     transition: all 0.2s linear;
     cursor: pointer;
     position: relative;
+    color: $color-secondary;
     &:hover {
       background-color: $color-secondary;
       color: #fff;
@@ -59,7 +60,7 @@
   }
 
   &__detail {
-    padding: 20px 30px 0 30px;
+    padding: 20px 20px 0 20px;
     text-align: left;
     &-heading {
       text-align: right;
@@ -93,9 +94,9 @@
     }
     &-desc {
       margin-bottom: 15px;
-      display: inline-block;
       line-height: 1.3;
       color: $color-orange-light;
+
       &-link:hover {
         color: $color-secondary;
         cursor: pointer;
@@ -200,20 +201,25 @@
           color: $color-blue;
         }
       }
-      a {
-        margin-left: 15px;
-        background: transparent;
-        font-weight: 700;
-        color: $color-secondary;
+    }
+    &-btn {
+      margin-left: 15px;
+      background: transparent;
+      font-weight: 700;
+      color: $color-secondary;
+      border: 3px solid $color-secondary;
+      border-radius: 50px;
+      padding: 5px 15px;
+      &:hover {
+        background: $color-secondary;
+        color: #fff;
         border: 3px solid $color-secondary;
-        border-radius: 50px;
-        padding: 5px 15px;
-        &:hover {
-          background: $color-secondary;
-          color: #fff;
-          border: 3px solid $color-secondary;
-        }
       }
+    }
+    &-mobile {
+      display: none;
+      width: 35%;
+      margin: 10px auto;
     }
   }
 }
