--- a/sass/responsive/_responsive.scss
+++ b/sass/responsive/_responsive.scss
@@ -1,20 +1,3 @@
-// @media screen and(min-width: 1024px) {
-//   .product {
-//     &__content {
-//       &-heading {
-//         font-size: 16px;
-//       }
-//       &-logo {
-//         width: 35%;
-//         margin: 10px;
-//       }
-//       &-desc {
-//         display: none;
-//       }
-//     }
-//   }
-// }
-
 @media screen and(max-width:1023px) {
   .header {
     &__right-item {
@@ -22,6 +5,85 @@
     }
     &__bars {
       display: block;
+    }
+  }
+
+  .product {
+    padding: 50px 0;
+    .nav-pills {
+      flex-wrap: nowrap;
+      .nav-item .nav-link {
+        padding: 10px;
+      }
+    }
+    strong {
+      font-size: 13px;
+    }
+    &__content {
+      &-heading {
+        font-size: 13px;
+        margin-bottom: 0;
+      }
+      &-logo {
+        margin: 10px 0;
+      }
+      &-detail {
+        margin-bottom: 10px;
+        p {
+          margin-bottom: 5px;
+          font-size: 20px;
+        }
+      }
+      &-button {
+        a {
+          padding: 10px 30px;
+          font-size: 13px;
+        }
+      }
+      &-bottom {
+        flex-direction: column-reverse;
+        img {
+          width: 50%;
+        }
+      }
+      &-link {
+        font-size: 10px;
+      }
+    }
+  }
+
+  .services {
+    padding: 50px 0;
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
+    }
+  }
+
+  .blog {
+    margin: 50px 0;
+    &__heading {
+      font-size: 40px;
+    }
+    &__list {
+      gap: 30px;
+    }
+    &__detail-desc {
+      &-text,
+      &-link {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 3;
+      }
+      &-link {
+        -webkit-line-clamp: 1;
+      }
+    }
+    &__button {
+      padding: 15px 0;
+      margin-top: 30px;
     }
   }
 }
@@ -54,6 +116,65 @@
       margin: 0;
     }
   }
+
+  .product {
+    margin-top: -200px;
+    &__heading {
+      font-size: 40px;
+      margin-bottom: 30px;
+    }
+    .nav-pills {
+      justify-content: space-between;
+      overflow: scroll;
+      .nav-item {
+        margin: 0 15px;
+        .nav-link {
+          padding: 10px 20px;
+        }
+      }
+    }
+    &__content {
+      &-detail {
+        strong {
+          font-size: 10px;
+        }
+      }
+      &-button {
+        a {
+          padding: 10px 20px;
+        }
+      }
+      &-price {
+        margin-right: 15px;
+      }
+      &-explore {
+        margin-right: 10px;
+      }
+      &-bottom {
+        display: none;
+      }
+    }
+  }
+
+  .banner {
+    &__list {
+      flex-wrap: wrap;
+      gap: 30px 0;
+    }
+    &__item {
+      margin: 0;
+    }
+  }
+
+  .blog {
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+      margin-bottom: 50px;
+    }
+    &__search-group {
+      padding: 10px 20px;
+    }
+  }
 }
 @media screen and (max-width: 479px) {
   .hero {
@@ -72,6 +193,92 @@
       li {
         width: 10px;
         height: 10px;
+      }
+    }
+  }
+
+  .product {
+    &__heading {
+      font-size: 30px;
+    }
+    &__content {
+      width: 100%;
+      top: 70%;
+      @include flex(center, center, none);
+      flex-direction: column;
+      padding: 10px 25px;
+      &-slider {
+        display: none;
+      }
+      &-mobile {
+        display: block;
+      }
+
+      &-price {
+        margin-right: 30px;
+      }
+
+      &-parameter {
+        margin-left: 30px;
+      }
+
+      &-button {
+        margin-top: 10px;
+        margin-bottom: 0;
+        a {
+          padding: 10px 40px;
+          margin: 0 20px;
+        }
+      }
+    }
+  }
+
+  .services {
+    &__list {
+      grid-template-columns: 1fr;
+    }
+    &__item {
+      padding: 20px;
+      &-content i {
+        font-size: 50px;
+      }
+      &-heading {
+        margin: 15px;
+      }
+      &-desc {
+        margin-bottom: 15px;
+      }
+    }
+  }
+
+  .banner__item {
+    padding: 80px 10px 30px 10px;
+    text-align: center;
+  }
+
+  .blog {
+    &__heading {
+      font-size: 30px;
+    }
+    &__list {
+      grid-template-columns: 1fr;
+    }
+    &__search {
+      &-group {
+        input {
+          &::-webkit-input-placeholder {
+            font-size: 15px;
+          }
+          &::-moz-input-placeholder {
+            font-size: 15px;
+          }
+        }
+      }
+      &-desktop {
+        display: none;
+      }
+      &-mobile {
+        display: block;
       }
     }
   }
