--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -46,6 +46,7 @@
   &__right {
     @include flex(center, space-around, none);
     margin: 0;
+    position: relative;
     li {
       list-style: none;
     }
@@ -76,6 +77,7 @@
       }
     }
   }
+
   &__search,
   &__bars {
     margin-left: 10px;
@@ -85,8 +87,24 @@
     }
     font-size: 25px;
   }
-  &__search {
+
+  &__input {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 300px;
+    border: 2px solid $color-secondary;
+    border-radius: 50px;
+    padding: 10px 30px;
+    box-shadow: rgba($color-secondary, 0.5) 0px 0px 10px 5px;
+    display: none;
   }
+  &__search-active {
+    .header__input {
+      display: block;
+    }
+  }
+
   &__bars {
     display: none;
     margin-left: 30px;
