--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,4 +9,5 @@
 @import "layout/banner";
 @import "layout/blog";
 @import "layout/footer";
+@import "layout/menu";
 @import "responsive/responsive";
