--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -110,4 +110,32 @@
       gap: 0 10px;
     }
   }
+
+  #rocket {
+    color: $color-blue;
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    background: rgba(#fff, 0.5);
+    border: 2px solid $color-blue;
+    border-radius: 10px;
+    position: fixed;
+    bottom: 50px;
+    right: 60px;
+    cursor: pointer;
+    transition: all 0.2s linear;
+    text-align: center;
+    line-height: 1.9;
+    a {
+      transition: all 0.2s linear;
+      &:hover {
+        color: #fff;
+      }
+    }
+    &:hover {
+      background: $color-blue;
+      border-color: $color-blue;
+      color: #fff;
+    }
+  }
 }
