--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -4,6 +4,7 @@
   top: 0;
   bottom: 0;
   width: 300px;
+  height: max-content;
   z-index: 999;
   background: #fff;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 15px 10px;
@@ -40,6 +41,10 @@
     list-style: none;
     height: 100%;
     padding: 70px 20px 20px;
+  }
+
+  &-mobile {
+    display: none;
   }
 
   &-item {
